* remove payment entity * fix bugs
