# api/src/main/java/dev/thiagooliveira/bankhub/domain/dto/CreatePaymentInput.java
@@ -1,6 +1,5 @@
 package dev.thiagooliveira.bankhub.domain.dto;
 
-import java.math.BigDecimal;
 import java.time.OffsetDateTime;
 import java.util.Optional;
 import java.util.UUID;
@@ -9,5 +8,4 @@ public record CreatePaymentInput(
     UUID payableReceivableId,
     UUID organizationId,
     Optional<OffsetDateTime> dateTime,
-    Optional<String> description,
-    Optional<BigDecimal> amount) {}
+    Optional<String> description) {}
